--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -1,4 +1,4 @@
-<% if flash[:success] == 'Le Gossip a bien été créé' || flash[:success] == 'Le Gossip a bien été supprimé' || flash[:success] = 'Votre compte a bien été créé' %>
+<% if flash[:success] == 'Le Gossip a bien été créé' || flash[:success] == 'Le Gossip a bien été supprimé' || flash[:success] == 'Votre compte a bien été créé' || flash[:success] == "Vous êtes bien connecté" %>
 <div class="alert alert-success" role="alert"><%= flash[:success] %></div>
 <% end %>
 
