--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,22 @@
           <li class="nav-item">
           <a class="nav-link" href="/contact">Contact <span class="sr-only">(current)</span></a>
           </li>
+      </div>
+      <div class="collapse navbar-collapse my-2 my-lg-0" id="navbarNav">  
+        <% if session[:user_id] == nil %>
+        <ul class="nav-item dropdown mr-sm-2">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="/users/new">S'inscrire</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="/sessions/new">Se connecter</a>
+          </div>
+        </ul>
+        <% else %>
+        <ul class="nav-item mr-sm-2">
+        <%= link_to "Se déconnecter", session_path(session.id), method: :delete %>
+        </ul>
+        <% end %>
         </ul>
       </div>
     </nav>
