--- a/app/views/gossips/show.html.erb
+++ b/app/views/gossips/show.html.erb
@@ -17,7 +17,13 @@
 
 <br>
 <h3>Tu veux supprimer ce Gossip ?</h3>
-<a href="<%= gossip_path(@gossip.id) %>" class = "btn btn-danger" data-confirm = "etes vous sure de suppimer?" data-method = "DELETE">Supprimer</a>
+<a href="<%= gossip_path(@gossip.id) %>" class = "btn btn-danger" data-confirm = "Etes vous sure de vouloir suppimer ce gossip?" data-method = "DELETE">Supprimer</a>
+<br>
+<br>
+
+<br>
+<h3>Tu veux modifier ce Gossip ?</h3>
+<a href="<%= gossip_path(@gossip.id) %>/edit" class = "btn btn-warning" data-confirm = "Etes vous sure de vouloir modifier ce gossip?" data-method = "GET">Modifer</a>
 <br>
 <br>
 
